[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelComponents/Segments/Scripts/TunnelLaserSegment.gd" type="Script" id=1]

[node name="TunnelLaserSegment" type="Node2D"]
script = ExtResource( 1 )

[node name="SegmentTime" type="Timer" parent="."]
one_shot = true

[node name="LaserSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SegmentTime" to="." method="_on_SegmentTime_timeout"]
[connection signal="timeout" from="LaserSpawnTimer" to="." method="_on_LaserSpawnTimer_timeout"]
